k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-platform-api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: infra-platform.candidato.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra-platform-api
                port:
                  name: http
